SERVER-35485 Add compressor capabilities for shell with URI input